<resources>
    <string name="app_name">Machine Task</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="signUp">SignUp</string>
    <string name="Login">Login</string>
</resources>