<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:gravity="center"
                android:minHeight="@dimen/min_height"
                android:text="Sign Up"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_Mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:minHeight="@dimen/min_height" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:background="@color/colorPrimary"
                android:text="@string/signUp"
                android:onClick="onSignUpClick"
                android:minHeight="@dimen/min_height"
                android:textColor="@color/buttonLabel" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:minHeight="@dimen/min_height"
                android:text="@string/Login"
                android:onClick="onLoginClick"
                android:textColor="@color/buttonLabel"
                 />


        </LinearLayout>
    </ScrollView>

</LinearLayout>